--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,17 @@
 {{ define "main" }}
 
+<div class="container">
+</br>
+</br>
+</br>
+</div>
+
 <!-- featured post -->
+<!--
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-10 featured-post-slider">
-        <!-- slider item -->
         {{ range ( where .Site.RegularPages "Type" "featured" )}}
         <article class="card featured-post">
           <div class="row no-gutters align-items-center">
@@ -34,7 +40,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- /featured post -->
 
 <!-- recent post -->
@@ -45,10 +51,10 @@
       <div class="col-lg-4 small-post-border">
         <article class="media">
           {{ if .Params.Image }}
-          <div class="recent-post-thumb mr-3" style="background-image: url('{{ .Params.Image | absURL }}');"></div>
+          <div class="recent-post-thumb mr-2" style="background-image: url('{{ .Params.Image | absURL }}');"></div>
           {{ end }}
           <div class="media-body">
-            <div class="mb-3 post-meta">
+            <div class="mb-2 post-meta">
               <span>By {{ .Site.Params.Author }}</span>
               {{ if not .Params.HideDate }}
               <span class="border-bottom border-primary px-2 mx-1"></span>
@@ -101,13 +107,13 @@
         </div>
       </div>
       <!-- sidebar -->
-      {{ partial "sidebar.html" . }}
+      <!-- {{ partial "sidebar.html" . }} -->
       <!-- /sidebar -->
 
       <!-- pagination -->
-      <div class="col-12 mt-5">
+      <!-- <div class="col-12 mt-5">
         {{ template "_internal/pagination.html" . }}
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
