--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,10 +23,10 @@
 <footer class="text-capitalize">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 text-center mb-5">
+      <!-- <div class="col-12 text-center mb-5">
         <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a>
-      </div>
-      {{ if or  .Site.Params.mobile .Site.Params.location .Site.Params.email }}         
+      </div> -->
+      <!-- {{ if or  .Site.Params.mobile .Site.Params.location .Site.Params.email }}         
       <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Contact Me</h6>
         <ul class="list-unstyled">
@@ -44,16 +44,16 @@
           </li>
         </ul>
       </div>
-      {{ end }}
-      <div class="col-lg-3 col-sm-6 mb-5">
+      {{ end }} -->
+      <!-- <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Social Contacts</h6>
         <ul class="list-unstyled">
           {{ range .Site.Params.social }}
           <li class="mb-3"><a class="text-dark" href="{{ .link | safeURL }}">{{ .title }}</a></li>
           {{ end }}
         </ul>
-      </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
+      </div> -->
+      <!-- <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Categories</h6>
         {{- if isset .Site.Taxonomies "categories" }}
         {{- if not (eq (len .Site.Taxonomies.categories) 0) }}
@@ -66,17 +66,21 @@
         </ul>
         {{- end }}
         {{- end }}
-      </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
+      </div> -->
+      <!-- <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Quick Links</h6>
         <ul class="list-unstyled">
           {{ range .Site.Menus.footer }}
           <li class="mb-3"><a class="text-dark" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
           {{ end }}
         </ul>
-      </div>
+      </div> -->
       <div class="col-12 border-top py-4 text-center">
-        {{ .Site.Params.copyright | markdownify }}
+        <div class="row">
+          <div class="col-3">Shourya Lala</div>
+          <div class="col-6"></div>
+          <div class="col-3">@atShourya</div>
+        </div>
       </div>
     </div>
   </div>
