--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,11 +9,11 @@
         class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
       {{ end }}
       <p>{{ .Summary }}</p>
-      <a href="{{ .Permalink }}" class="btn btn-outline-primary">Know More</a>
+      <!-- <a href="{{ .Permalink }}" class="btn btn-outline-primary">Know More</a> -->
       {{ end }}
     </div>
     <!-- category -->
-    <div class="widget">
+    <!-- <div class="widget">
       <h4 class="widget-title">Category</h4>
       {{- if isset .Site.Taxonomies "categories" }}
       {{- if not (eq (len .Site.Taxonomies.categories) 0) }}
@@ -26,9 +26,9 @@
       </ul>
       {{- end }}
       {{- end }}
-    </div>
+    </div> -->
     <!-- Tags -->
-    <div class="widget">
+    <!-- <div class="widget">
       <h4 class="widget-title">Tag</h4>
       {{- if isset .Site.Taxonomies "tags" }}
       {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
@@ -40,19 +40,19 @@
       </ul>
       {{- end }}
       {{- end }}
-    </div>
+    </div> -->
     <!-- social -->
-    <div class="widget">
+    <!-- <div class="widget">
       <h4 class="widget-title">Social</h4>
       <ul class="list-inline social-links">
         {{ range .Site.Params.social }}
         <li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
         {{ end }}
       </ul>
-    </div>
+    </div> -->
     <!-- advertisement -->
-    <div class="widget">
+    <!-- <div class="widget">
       <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
-    </div>
+    </div> -->
   </div>
 </div>
