--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -103,6 +103,13 @@
   }
 }
 
+.navbar-title {
+  text-decoration: none;
+  color: inherit;
+  font-size: 25px;
+  font-weight: 900;
+}
+
 .post-meta {
   span {
     color: #444;
