--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Color Variables
-$primary-color: #00AAA1;
-$text-color: #666666;
+$primary-color: #2B478C;
+$text-color: #36454F;
 $text-color-dark: #222222;
 $text-color-light: #959595;
 $body-color: #fff;
@@ -10,5 +10,6 @@ $white: #fff;
 $gray: #f4fcff;
 
 // Font Variables
-$primary-font: 'Raleway', sans-serif;
+// $primary-font: 'Raleway', sans-serif;
+$primary-font: 'Arial', Helvetica, serif;
 $icon-font: 'themify';
