--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -77,9 +77,9 @@
       </div> -->
       <div class="col-12 border-top py-4 text-center">
         <div class="row">
-          <div class="col-3">Shourya Lala</div>
+          <div class="col-3">Shourya Lala © 2023</div>
           <div class="col-6"></div>
-          <div class="col-3">@atShourya</div>
+          <div class="col-3"><a href="https://twitter.com/atShourya" target="_blank">@atShourya</a></div>
         </div>
       </div>
     </div>
