--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-white bg-transparent border-bottom pl-0">
-      <a class="navbar-brand mobile-view" href="{{ .Site.BaseURL }}"><div class=navbar-title>Shourya</div></a>
+      <a class="navbar-brand mobile-view" href="{{ .Site.BaseURL }}"><div class=navbar-title>Shourya Lala</div></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation">
         <i class="ti-menu"></i>
       </button>
@@ -19,7 +19,7 @@
           </ul>
         </div>
 
-        <a class="navbar-brand mx-auto desktop-view" href="{{ .Site.BaseURL }}"><div class=navbar-title>Shourya</div></a>
+        <a class="navbar-brand mx-auto desktop-view" href="{{ .Site.BaseURL }}"><div class=navbar-title>Shourya Lala</div></a>
 
         <ul class="navbar-nav">
           {{ range .Site.Menus.main }}
