--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,7 +24,7 @@
         </div>
 
         <!-- comments -->
-        {{ template "_internal/disqus.html" . }}
+        <!-- {{ template "_internal/disqus.html" . }} -->
       </div>
     </div>
   </div>
