--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <section class="section-sm">
   <div class="container">
       <!-- {{ with .Site.GetPage "/about" }} -->
-    <div class="row">
+    <div class="row pb-3 border-bottom">
       <div class="col-lg-12 mb-5 mb-lg-0">
         <div class="row">
         <div class='col-md-2 mb-4'>
@@ -26,12 +26,12 @@
 </section>
 
 <!-- blog post -->
-<section class="section pb-0 py-0">
+<!-- <section class="section pb-0 py-0">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mb-5 mb-lg-0">
         <div class="row">
-          {{ $paginator := .Paginate (where .Site.RegularPages "Type" "post") }}
+          {{ $paginator := .Paginate (where .Site.RegularPages "Type" "featured") }}
           {{ range $paginator.Pages }}
           <a href="{{ .Permalink }}"><div class="col-md-4 mb-4">
             <article class="card">
@@ -49,22 +49,53 @@
                   <span>{{ .PublishDate.Format "02 January 2006" }}</span>
                 </div>
                 <p class="card-text">{{ .Summary }}</p>
-                <!-- <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a> -->
+                <!-- <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>  
               </div>
             </article>
           </div></a>
           {{ end }}
         </div>
       </div>
+    </div>
+  </div>
+</section> -->
 
-
-      <!-- pagination -->
-      <!-- <div class="col-12 mt-5">
-        {{ template "_internal/pagination.html" . }}
-      </div> -->
+<section class="section pb-0 py-0 px-4">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-9 mb-5 mb-lg-0">
+        <div class="row">
+          {{ $paginator := .Paginate (where .Site.RegularPages "Type" "featured") }}
+          {{ range $paginator.Pages }}
+          <a href="{{ .Permalink }}">
+            <article>
+              <div class="row">
+                <div class="col-md-4 mb-4">
+                  {{ if .Params.Image }}
+                  <img src="{{ .Params.Image | absURL }}" class="card-img-top" alt="{{ .Title | markdownify }}">
+                  {{ end }}
+                </div>
+                <div class="col-md-8 mb-4">
+                  {{ range .Params.Categories }}
+                    <p class="text-primary">{{ . | title | humanize }}</p>
+                          {{ end }}
+                          <p class="h5 ">{{ .Title | markdownify }}</p>
+                  <div class="mb-3 post-meta">
+                    <span class="border-primary"></span>
+                    <span>{{ .PublishDate.Format "02 January 2006" }}</span>
+                  </div>
+                  <p class="card-text">{{ .Summary }}</p>
+                </div>
+              </div>
+            </article>
+          </a>
+          {{ end }}
+        </div>
+      </div>
     </div>
   </div>
 </section>
+
 <!-- /blog post -->
 
 {{ end }}
