--- a/themes/blog-page/layouts/partials/head.html
+++ b/themes/blog-page/layouts/partials/head.html
@@ -26,7 +26,7 @@
   <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 
   {{ "<!-- google analitycs -->" | safeHTML }}
-  <script>
+  <!-- <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
       i[r] = i[r] || function () {
@@ -40,6 +40,14 @@
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', '{{ .Site.Params.googleAnalitycsID }}', 'auto');
     ga('send', 'pageview');
+  </script> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2FWW948PYS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2FWW948PYS');
   </script>
 
 </head>
