--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -12,11 +12,11 @@
         </div>
         <div class='col-md-6 mb-4'>
           <b>Welcome!</b>
-          <p>{{ .Params.aboutme }}</p>
+          <p>I am the cofounder and CTO of <a target="_blank" href="https://fello.in">Fello</a>, a prize-linked savings application backed by Y Combinator, currently serving hundreds of thousands of users. Previously, I had spent many years building financial tools for large institutional clients at BlackRock. I am deeply passionate about neo-psychedelic rock and building great consumer products. I live in Bangalore and usually spend my free time attempting to pick up new skills.</p>
         </div>
         <div class='col-md-4 mb-4 border-left'>
           <b>Get In Touch</b>
-          <p>{{ .Params.getintouch }}</p>
+          <p><a href="https://twitter.com/atShourya" target="'_blank">Twitter</a> tends to have the least amount of noise. You can also reach me at <a href="mailto://shouryalala@gmail.com">shouryalala@gmail.com</a>. I am always up to chat about the future of tech. Or fighter aircrafts</p>
         </div>
         </div>
       </div>
@@ -25,40 +25,6 @@
   </div>
 </section>
 
-<!-- blog post -->
-<!-- <section class="section pb-0 py-0">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 mb-5 mb-lg-0">
-        <div class="row">
-          {{ $paginator := .Paginate (where .Site.RegularPages "Type" "featured") }}
-          {{ range $paginator.Pages }}
-          <a href="{{ .Permalink }}"><div class="col-md-4 mb-4">
-            <article class="card">
-              {{ if .Params.Image }}
-              <img src="{{ .Params.Image | absURL }}" class="card-img-top" alt="{{ .Title | markdownify }}">
-              {{ end }}
-              <div class="card-body px-0">
-                {{ range .Params.Categories }}
-                <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}"
-                  class="text-primary">{{ . | title | humanize }}</a>
-                {{ end }}
-                <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
-                <div class="mb-3 post-meta">
-                  <span class="border-primary"></span>
-                  <span>{{ .PublishDate.Format "02 January 2006" }}</span>
-                </div>
-                <p class="card-text">{{ .Summary }}</p>
-                <!-- <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>  
-              </div>
-            </article>
-          </div></a>
-          {{ end }}
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 <section class="section pb-0 py-0 px-4">
   <div class="container">
@@ -96,6 +62,5 @@
   </div>
 </section>
 
-<!-- /blog post -->
 
 {{ end }}
