--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class='col-md-4 mb-4 border-left'>
           <b>Get In Touch</b>
-          <p><a href="https://twitter.com/atShourya" target="'_blank">Twitter</a> tends to have the least amount of noise. You can also reach me at <a href="mailto://shouryalala@gmail.com">shouryalala@gmail.com</a>. I am always up to chat about the future of tech. Or fighter aircrafts</p>
+          <p><a href="https://twitter.com/atShourya" target="'_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">Twitter</a> tends to have the least amount of noise. You can also reach me at <a href="mailto://shouryalala@gmail.com">shouryalala@gmail.com</a>. I am always up to chat about the future of tech. Or fighter aircrafts</p>
         </div>
         </div>
       </div>
