update: adding another post: Retail POS

--- a/themes/blog-page/layouts/_default/single.html
+++ b/themes/blog-page/layouts/_default/single.html
@@ -10,11 +10,8 @@
         {{ end }}
         <h2>{{ .Title | markdownify }}</h2>
         <div class="mb-3 post-meta">
-          <span>By {{if .Params.Author}}{{ .Params.Author }}{{else}}{{.Site.Params.Author}}{{end}}</span>
-          {{ if not .Params.HideDate }}
-          <span class="border-bottom border-primary px-2 mx-1"></span>
-          <span>{{ .PublishDate.Format "02 January 2006" }}</span>
-          {{ end }}
+          <span class="border-bottom border-primary mx-1">
+          <span>{{ .PublishDate.Format "02 January, 2006" }}</span></span>
         </div>
         {{ if .Params.image }}
         <img src="{{ .Params.Image | absURL }}" class="img-fluid w-100 mb-4" alt="{{ .Title | markdownify }}">
@@ -22,9 +19,6 @@
         <div class="content mb-5">
           {{ .Content }}
         </div>
-
-        <!-- comments -->
-        <!-- {{ template "_internal/disqus.html" . }} -->
       </div>
     </div>
   </div>
