--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="section-sm">
+<section class="section-sm pb-5">
   <div class="container">
       <!-- {{ with .Site.GetPage "/about" }} -->
     <div class="row pb-3 border-bottom">
@@ -24,33 +24,32 @@
     </div>
   </div>
 </section>
-
-
 <section class="section pb-0 py-0 px-4">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-9 mb-5 mb-lg-0">
+      <div class="col-lg-8 mb-5 mb-lg-0">
         <div class="row">
           {{ $paginator := .Paginate (where .Site.RegularPages "Type" "featured") }}
           {{ range $paginator.Pages }}
           <a href="{{ .Permalink }}">
             <article>
-              <div class="row">
-                <div class="col-md-4 mb-4">
+              <div class="row mb-4">
+                <div class="col-md-1"></div>
+                <div class="col-md-4 mb-2">
                   {{ if .Params.Image }}
-                  <img src="{{ .Params.Image | absURL }}" class="card-img-top" alt="{{ .Title | markdownify }}">
+                  <img src="{{ .Params.Image | absURL }}" class="card-img-top " alt="{{ .Title | markdownify }}">
                   {{ end }}
                 </div>
-                <div class="col-md-8 mb-4">
+                <div class="col-md-7 mb-2">
                   {{ range .Params.Categories }}
-                    <p class="text-primary">{{ . | title | humanize }}</p>
+                    <p class="text-primary mb-2">{{ . | title | humanize }}</p>
                           {{ end }}
-                          <p class="h5 ">{{ .Title | markdownify }}</p>
-                  <p class="card-text">{{ .Params.subtitle }}</p>      
-                  <div class="mb-3 post-meta">
+                    <p class="h5 mb-0">{{ .Title | markdownify }}</p><p class="card-text">{{ .Params.subtitle }}</p> 
+                    <p class="post-meta">{{ .PublishDate.Format "02 January 2006" }}</p>     
+                  <!-- <div class="post-meta">
                     <span class="border-primary"></span>
                     <span>{{ .PublishDate.Format "02 January 2006" }}</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </article>
