--- a/themes/blog-page/layouts/partials/footer.html
+++ b/themes/blog-page/layouts/partials/footer.html
@@ -77,9 +77,8 @@
       </div> -->
       <div class="col-12 border-top py-4 text-center">
         <div class="row">
-          <div class="col-3">Shourya Lala © 2023</div>
-          <div class="col-6"></div>
-          <div class="col-3"><a href="https://twitter.com/atShourya" target="_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">@atShourya</a></div>
+          <div class="col-6 text-left">Shourya Lala © 2023</div>
+          <div class="col-6 text-right"><a href="https://twitter.com/atShourya" target="_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">@atShourya</a></div>
         </div>
       </div>
     </div>
