--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -12,11 +12,11 @@
         </div>
         <div class='col-md-6 mb-4'>
           <b>Welcome!</b>
-          <p>I am the cofounder and CTO of <a target="_blank" href="https://fello.in">Fello</a>, a prize-linked savings application backed by Y Combinator, currently serving hundreds of thousands of users. Previously, I had spent many years building financial tools used by large institutional clients at BlackRock. I am passionate about building great products that drive impact. I live in Bangalore and usually spend my free time exploring options trading and building my ideas.</p>
+          <p>I am the cofounder and CTO of <a target="_blank" href="https://fello.in">Fello</a>, a prize-linked savings application backed by Y Combinator, currently serving hundreds of thousands of users. Previously, I had spent many years building financial tools used by large institutional clients at BlackRock. I am passionate about building great products that drive impact. I live in Bangalore and usually spend my free time exploring derivative trading and building my ideas.</p>
         </div>
         <div class='col-md-4 mb-4 border-left'>
           <b>Get In Touch</b>
-          <p><a href="https://twitter.com/atShourya" target="'_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">Twitter</a> tends to have the least amount of noise. You can also reach me at <a href="mailto://shouryalala@gmail.com">shouryalala@gmail.com</a>. I am always up to chat about the future of tech. Or fighter aircrafts</p>
+          <p>You can reach me <a href="https://twitter.com/atShourya" target="'_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">@atShourya</a> on Twitter or <a href="mailto://shourya@fello.in">shourya@fello.in</a> if you prefer email. Past years have taught me the leverage one gains through networks. This is why I try to make it a point to reply to all the messages I get.</p>
         </div>
         </div>
       </div>
