--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class='col-md-6 mb-4'>
           <b>Welcome!</b>
-          <p>I am the cofounder and CTO of <a target="_blank" href="https://fello.in">Fello</a>, a prize-linked savings application backed by Y Combinator, currently serving hundreds of thousands of users. Previously, I had spent many years building financial tools used by large institutional clients at BlackRock. I am passionate about building great products that drive impact. I live in Bangalore and usually spend my free time exploring derivative trading and building my ideas.</p>
+          <p>I am the cofounder and CTO of <a target="_blank" href="https://fello.in">Fello</a>, a prize-linked savings application backed by Entrepreneur First and Y Combinator, currently serving hundreds of thousands of users. Previously, I had spent many years building financial tools used by large institutional clients at BlackRock. I am passionate about building great products that drive impact. I live in Bangalore and usually spend my free time exploring derivative trading and building my ideas.</p>
         </div>
         <div class='col-md-4 mb-4 border-left'>
           <b>Get In Touch</b>
