--- a/themes/blog-page/layouts/index.html
+++ b/themes/blog-page/layouts/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class='col-md-4 mb-4 border-left'>
           <b>Get In Touch</b>
-          <p>You can reach me <a href="https://twitter.com/atShourya" target="'_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">@atShourya</a> on Twitter or <a href="mailto://shourya@fello.in">shourya@fello.in</a> if you prefer email. Past years have taught me the leverage one gains through networks. This is why I try to make it a point to reply to all the messages I get.</p>
+          <p>You can reach me <a href="https://twitter.com/atShourya" target="'_blank" onclick="gtag('event', 'link_click', { 'event_category': 'Link Clicks', 'event_label': 'twitter' });">@atShourya</a> on Twitter or <a href="mailto://shourya@fello.in">shourya@fello.in</a> if you prefer email. Cold messages sent or received have often turned out to be a welcome surprise in building partnerships or making friends!</p>
         </div>
         </div>
       </div>
