update: small textual updates

--- a/themes/blog-page/layouts/profile/list.html
+++ b/themes/blog-page/layouts/profile/list.html
@@ -37,7 +37,7 @@
 <table width="800" border="0" style="float:left" id="content">
   <tr>
     <td valign="top">
-      <p class="title">Shourya Lala</p>
+      <p class="title"><a href="https://shourya.io" style="text-decoration: none; color: inherit;">Shourya Lala</a></p>
 
       <!-- EMPLOYMENT -->
       <table width="100%" border="0">
@@ -74,11 +74,11 @@
           <td width="90">&nbsp;</td>
           <td width="694">
             <p>BlackRock is the world’s largest asset manager where I worked on the Aladdin Client Invoicing solution.</p>
-            <p>Developed complex modules for creating flexible invoicing solutions leveraging Spring IoC for container
+            <p>Developed crucial modules for creating flexible invoicing solutions leveraging Spring IoC for container
               management and DAO patterns for data modeling.</p>
-            <p>Built frontend client dashboards using Angular framework following MVC patterns supporting multiple use cases.</p>
+            <p>Built frontend client dashboards using Angular framework following MVC patterns that supported multiple use cases.</p>
             <p>Oversaw the migration of 2300 global institutional clients from an external invoicing provider to Aladdin which
-              summed to over $150mn in transfer records.</p>
+              summed to over $150mn+ in transfer records.</p>
           </td>
         </tr>
       </table>
@@ -88,14 +88,14 @@
       <table width="100%" border="0">
         <tr>
           <td width="90" valign="top" class="left_heading">Ventures and Projects<a name="projects" id="projects"></a></td>
-          <td width="450" valign="top"><strong><a href="https://shourya.io/posts/periferi">Periferi</a></strong></td>
-          <td width="250" valign="top"><div align="right"><em>December 2008</em></div></td>
+          <td width="450" valign="top"><strong><a href="https://shourya.io/posts/retail-pos">Retail POS</a></strong></td>
+          <td width="250" valign="top"><div align="right"><em>August 2020</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -7mm;">
         <tr>
           <td width="90">&nbsp;</td>
-          <td width="694"><p>Periferi was a location based socal networking platform intended to connect people in the same geography and act as a bulletin for local updates. It became a popular application in a number of colleges in India and reached over 10,000 users. </p>
+          <td width="694"><p>A mobile app that enabled any smartphone to operate as a billing POS machine. It used a locally run CNN model that could identify grocery items and quantities. This allowed informal merchants to track sales, inventory and invoice products without a computer or barcode scanners. Currently used by select merchants.</p>
           </td>
         </tr>
       </table>
@@ -104,13 +104,13 @@
         <tr>
           <td width="90">&nbsp;</td>
           <td width="500" valign="top"><strong><a href="https://github.com/shouryalala/ria_client_app">CRYB</a></strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="188" valign="top"><div align="right"><em>March 2019</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
         <tr>
           <td width="90">&nbsp;</td>
-          <td width="694"><p>A hyperlocal service for home assistance, CRYB tried to connect residents of India to informal workers for daily household chores. The core USP was a universal SDK that enabled illiterate workers to use online services on their basic feature phones simply using voice. Platform worked with Android, KaiOS and T9 feature phones.</p>
+          <td width="694"><p>A hyperlocal service for home assistance, CRYB connected residents of India to informal workers for daily household chores. The core USP was a universal SDK that enabled illiterate workers to use online services on their basic feature phones simply using voice. Tech was later acquired by a private party.</p>
           </td>
         </tr>
       </table>
@@ -118,14 +118,14 @@
       <table width="100%" border="0">
         <tr>
           <td width="90">&nbsp;</td>
-          <td width="500" valign="top"><strong><a href="https://shourya.io/posts/retail-pos">Retail POS</a></strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="500" valign="top"><strong><a href="https://shourya.io/posts/periferi">Periferi</a></strong></td>
+          <td width="188" valign="top"><div align="right"><em>May 2017</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
         <tr>
           <td width="90">&nbsp;</td>
-          <td width="694"><p>A mobile app that enabled any smartphone to operate as a billing POS machine. It used a locally run CNN model that could identify grocery items and quantities. This allowed informal merchants to track sales, inventory and invoice products without a computer or barcode scanners.</p>
+          <td width="694"><p>Periferi was a location based social networking platform intended to connect people in the same geography and act as a bulletin for local updates. It became a popular application in a number of colleges in India and reached over 10,000 users organically.</p>
           </td>
         </tr>
       </table>
@@ -134,13 +134,13 @@
         <tr>
           <td width="90">&nbsp;</td>
           <td width="500" valign="top"><strong><a href="https://github.com/shouryalala/Pepperspray">Pepperspray</a></strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="188" valign="top"><div align="right"><em>August 2016</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
         <tr>
           <td width="90">&nbsp;</td>
-          <td width="694"><p>A women's safety application that used speech-to-text and sentiment analysis to identify when someone might be in danger and notify emergency contacts without requiring the user to interact with their phone or the app.</p>
+          <td width="694"><p>A women's safety application that used speech-to-text and sentiment analysis to identify when someone might be in danger and notify emergency contacts without requiring the user to interact with their phone or the app. Was featured in local media.</p>
           </td>
         </tr>
       </table>
@@ -150,7 +150,7 @@
         <tr>
           <td width="90" valign="top" class="left_heading">Recognitions<a name="projects" id="projects"></a></td>
           <td width="450" valign="top"><strong><a href="https://www.ycombinator.com/companies/fello">YCombinator</a></strong></td>
-          <td width="250" valign="top"><div align="right"><em>December 2008</em></div></td>
+          <td width="250" valign="top"><div align="right"><em>November 2021 - April 2022</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
@@ -165,7 +165,7 @@
         <tr>
           <td width="90">&nbsp;</td>
           <td width="500" valign="top"><strong><a href="https://www.joinef.com/companies/fello/">Entrepreneur First</a></strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="188" valign="top"><div align="right"><em>August 2020 - January 2021</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
@@ -180,7 +180,7 @@
         <tr>
           <td width="90">&nbsp;</td>
           <td width="500" valign="top"><strong>Tech Hackathons</strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="188" valign="top"><div align="right"><em>2016 - 2018</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
@@ -195,7 +195,7 @@
         <tr>
           <td width="90">&nbsp;</td>
           <td width="500" valign="top"><strong>Startup Awards</strong></td>
-          <td width="188" valign="top"><div align="right"><em>January 2010</em></div></td>
+          <td width="188" valign="top"><div align="right"><em>2021 - 2023</em></div></td>
         </tr>
       </table>
       <table width="100%" border="0" style="margin-top: -3mm;">
@@ -214,7 +214,7 @@
           <td width="290"><div align="right"><em>April 2015 &ndash; June 2015</em></div></td>
         </tr>
       </table>
-      <table width="100%" border="0">
+      <table width="100%" border="0" style="margin-top: -3mm;">
         <tr>
           <td width="90">&nbsp;</td>
           <td width="694"><p>Worked on a Credit Card fraud detection project using Ensemble Neural Networks. Used multiple data balancing techniques over 240 datasets to build a comparison study b/w supervised and unsupervised results.</p></td>
@@ -228,7 +228,7 @@
           <td width="290"><div align="right"><em>May 2015 &ndash; July 2015</em></div></td>
         </tr>
       </table>
-      <table width="100%" border="0">
+      <table width="100%" border="0" style="margin-top: -3mm;">
         <tr>
           <td width="90">&nbsp;</td>
           <td width="694"><p>Built a full stack event management web portal that aggregated data from multiple vendor sources and compiled the best suited service offering based on user budget. Used by 50k+ users. </p></td>
@@ -241,9 +241,9 @@
     <tr>
       <td width="90" valign="top" class="left_heading">Key Skills<a name="key_skills" id="key_skills"></a></td>
       <td width="694"><strong>System Architecture</strong><br />
-          AWS: ECS, EKS, Lambda, RDS, Elasticache, EventBridge, Step Functions, SQS, SNS, S3, and others;<br />
-          GCP: Cloud Run, Cloud Tasks, Functions, Pub/Sub<br />
-          CICD | Telemetry | SysOps | DevOps<br />
+          AWS: ECS, EKS, Lambda, RDS, Elasticache, EventBridge, Step Functions, SQS, SNS, S3, Rekognition, and others;<br />
+          GCP: Cloud Run, Cloud Tasks, Functions, Pub/Sub, Firebase, Vertex AI<br />
+          General: CI/CD, Telemetry, SysOps, DevOps, AdminOps<br />
       </td>
     </tr>
   </table>
@@ -251,7 +251,8 @@
     <tr>
       <td width="90">&nbsp;</td>
       <td width="694"><strong>Application Programming</strong><br />
-        Node.js, Flutter|TypeScript, Javascript, Dart, Python
+        Platforms/Frameworks: Node.js-Express,Next,Fastify | Flutter
+        Languages: TypeScript, Javascript, Dart, Python
     </td>
     </tr>
   </table>
@@ -266,8 +267,8 @@
   <table width="100%" border="0">
     <tr>
       <td width="90">&nbsp;</td>
-      <td width="694"><strong>Management</strong><br />
-        Product Management, Product Design, Customer Service, Stakeholder Management, Financial Operations
+      <td width="694"><strong>General</strong><br />
+        Hiring, Product Management, Team/Stakeholder Management, Financial Operations, Risk and Compliance
     </td>
     </tr>
   </table>
